# FW-OBD

./: .env.example  .gitignore  HLD_v1.0_Firewall_OBD_Platform.md  pyproject.toml
knowledge_base/fortigate/: best_practices.json
knowledge_base/fortigate/compliance/: hipaa.json
src/fw_obd/: main.py
src/fw_obd/ai/: change_planner.py  smart_terminal.py
src/fw_obd/audit/: quick_audit.py
src/fw_obd/backup/: backup_manager.py
src/fw_obd/connection/: rest_client.py  ssh_handler.py
src/fw_obd/db/: database.py
src/fw_obd/import_/: csv_importer.py
src/fw_obd/models/: serialize.py  udm.py
src/fw_obd/parsers/: base_parser.py
src/fw_obd/parsers/fortigate/: commands.py  parser.py  reader.py  rest_reader.py
src/fw_obd/security/: __init__.py  crypto.py
src/fw_obd/services/: config.py  device_grouping.py  device_scan.py  metrics.py
src/fw_obd/ui/: audit_report_dialog.py  change_plan_dialog.py  connect_dialog.py  dashboard.py  devices_page.py  import_devices_dialog.py  main_window.py  metrics_poller.py  reports_page.py  scan_worker.py  settings_page.py  smart_terminal_widget.py
tests/: test_audit_dialog.py  test_config.py  test_csv_importer.py  test_dashboard.py  test_database.py  test_device_grouping.py  test_device_scan.py  test_devices_page.py  test_excel_importer.py  test_fortigate_parser.py  test_importer_mapping.py  test_metrics.py  test_reports.py  test_rest_connection.py
tests/fixtures/fortigate/: firewall_policy.txt  system_interface.txt  system_status.txt
